[gd_scene load_steps=16 format=3 uid="uid://c2xaot8ioy4q7"]

[ext_resource type="Script" path="res://Script/menu/main_menu.gd" id="1_vwg7i"]
[ext_resource type="FontFile" uid="uid://cwjuco6a2m8d8" path="res://Assets/font/VCR_OSD_MONO_1.001.ttf" id="2_0hm3m"]
[ext_resource type="Texture2D" uid="uid://dmh8tccrox0i8" path="res://textures/ui/загружено.jpg" id="2_5hqoo"]
[ext_resource type="Texture2D" uid="uid://d255qtaobl71d" path="res://textures/menu/menu-image.png" id="3_0ioau"]
[ext_resource type="FontFile" uid="uid://csvgsttnwoudf" path="res://Assets/font/Topor-Regular.ttf" id="3_i5rkl"]
[ext_resource type="AudioStream" uid="uid://b0b5drlyjdy2n" path="res://Assets/Sound/soundeffect/hoverbutton.mp3" id="4_wuqtc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wnpwb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f05ck"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d0w3c"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mxbts"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_y7rxn"]
texture = ExtResource("3_0ioau")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_riyq2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sld8w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e63n0"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_eggld"]
texture = ExtResource("3_0ioau")

[node name="Main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vwg7i")

[node name="background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.00392157, 0, 0, 1)

[node name="solo" type="Button" parent="."]
layout_mode = 0
offset_left = 88.0
offset_top = 452.0
offset_right = 424.0
offset_bottom = 516.0
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_0hm3m")
theme_override_font_sizes/font_size = 18
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_wnpwb")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_wnpwb")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_f05ck")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_d0w3c")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_mxbts")
theme_override_styles/hover = SubResource("StyleBoxTexture_y7rxn")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_riyq2")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_sld8w")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_wnpwb")
theme_override_styles/normal = SubResource("StyleBoxEmpty_e63n0")
text = "SOLO"

[node name="host" type="Button" parent="."]
layout_mode = 0
offset_left = 86.0
offset_top = 531.0
offset_right = 243.0
offset_bottom = 595.0
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_0hm3m")
theme_override_font_sizes/font_size = 18
theme_override_styles/focus = SubResource("StyleBoxEmpty_wnpwb")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_wnpwb")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_wnpwb")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_wnpwb")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_wnpwb")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_wnpwb")
theme_override_styles/hover = SubResource("StyleBoxTexture_eggld")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_wnpwb")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_wnpwb")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_wnpwb")
theme_override_styles/normal = SubResource("StyleBoxEmpty_wnpwb")
text = "HOST"

[node name="join" type="Button" parent="."]
layout_mode = 0
offset_left = 267.0
offset_top = 530.0
offset_right = 424.0
offset_bottom = 594.0
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_0hm3m")
theme_override_font_sizes/font_size = 18
theme_override_styles/focus = SubResource("StyleBoxEmpty_wnpwb")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_wnpwb")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_wnpwb")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_wnpwb")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_wnpwb")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_wnpwb")
theme_override_styles/hover = SubResource("StyleBoxTexture_eggld")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_wnpwb")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_wnpwb")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_wnpwb")
theme_override_styles/normal = SubResource("StyleBoxEmpty_wnpwb")
text = "JOIN"

[node name="settings" type="Button" parent="."]
layout_mode = 0
offset_left = 88.0
offset_top = 613.0
offset_right = 427.0
offset_bottom = 677.0
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_0hm3m")
theme_override_font_sizes/font_size = 18
theme_override_styles/focus = SubResource("StyleBoxEmpty_wnpwb")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_wnpwb")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_wnpwb")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_wnpwb")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_wnpwb")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_wnpwb")
theme_override_styles/hover = SubResource("StyleBoxTexture_eggld")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_wnpwb")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_wnpwb")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_wnpwb")
theme_override_styles/normal = SubResource("StyleBoxEmpty_wnpwb")
text = "SETTINGS"

[node name="exit" type="Button" parent="."]
layout_mode = 0
offset_left = 88.0
offset_top = 705.0
offset_right = 431.0
offset_bottom = 769.0
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_0hm3m")
theme_override_font_sizes/font_size = 18
theme_override_styles/focus = SubResource("StyleBoxEmpty_wnpwb")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_wnpwb")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_wnpwb")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_wnpwb")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_wnpwb")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_wnpwb")
theme_override_styles/hover = SubResource("StyleBoxTexture_eggld")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_wnpwb")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_wnpwb")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_wnpwb")
theme_override_styles/normal = SubResource("StyleBoxEmpty_wnpwb")
text = "EXIT"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 45.0
offset_top = 23.0
offset_right = 108.0
offset_bottom = 49.0
text = "V 23.03"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 579.0
offset_right = 1886.0
offset_bottom = 1080.0
texture = ExtResource("2_5hqoo")

[node name="Logo" type="Label" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 177.0
offset_right = 585.0
offset_bottom = 294.0
theme_override_colors/font_color = Color(0.787542, 2.69532e-06, 2.88785e-07, 1)
theme_override_fonts/font = ExtResource("3_i5rkl")
theme_override_font_sizes/font_size = 56
text = "Muted 
               Desperation"

[node name="HitsSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_wuqtc")
volume_db = -25.297
bus = &"sfx"

[connection signal="mouse_entered" from="solo" to="." method="_on_solo_mouse_entered"]
[connection signal="pressed" from="solo" to="." method="play"]
[connection signal="mouse_entered" from="host" to="." method="_on_host_mouse_entered"]
[connection signal="pressed" from="host" to="." method="play2"]
[connection signal="mouse_entered" from="settings" to="." method="_on_settings_mouse_entered"]
[connection signal="pressed" from="settings" to="." method="_on_settings_pressed"]
[connection signal="mouse_entered" from="exit" to="." method="_on_exit_mouse_entered"]
[connection signal="pressed" from="exit" to="." method="quit"]
